--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,8 @@
         <h1 class="color-first-text">{{titleSecondWelcome}}</h1>
         <h1 class="color-second-text">{{titlethirtWelcome}}</h1>
     </div>
+    <div class="sub-title">
+        <h2>{{text}}</h2>
+    </div>
 </section>
 <router-outlet />
